# PandoraSDK

./: .travis.yml  CMakeLists.txt  ChangeLog.txt  Makefile  README.md
cmake/: FineGranularityContentConfig.cmake.in  FineGranularityContentConfigVersion.cmake.in  LCContentConfig.cmake.in  LCContentConfigVersion.cmake.in  LCPandoraContentConfig.cmake.in  LCPandoraContentConfigVersion.cmake.in  PandoraSDKConfig.cmake.in  PandoraSDKConfigVersion.cmake.in  PandoraSDK_sources.cmake
doc/: Doxyfile  HappyBirthdaySong.m4a
include/: LCContent.h  LCContentFast.h
include/Api/: PandoraApi.h  PandoraApiImpl.h  PandoraContentApi.h  PandoraContentApiImpl.h
include/Geometry/: DetectorGap.h  LArTPC.h  SubDetector.h
include/Helpers/: CaloHitHelper.h  ClusterFitHelper.h  ClusterHelper.h  EnergyCorrectionsHelper.h  FragmentRemovalHelper.h  GeometryHelper.h  MCParticleHelper.h  ParticleIdHelper.h  ReclusterHelper.h  XmlHelper.h
include/LCCheating/: CheatingClusterCleaningAlgorithm.h  CheatingTrackToClusterMatching.h  PerfectClusteringAlgorithm.h  PerfectFragmentRemovalAlgorithm.h  PerfectParticleFlowAlgorithm.h
include/LCClustering/: ClusteringParentAlgorithm.h  ConeClusteringAlgorithm.h  ConeClusteringAlgorithmFast.h  ForcedClusteringAlgorithm.h
include/LCContentFast/: CaloHitPreparationAlgorithmFast.h  ConeClusteringAlgorithmFast.h  FragmentRemovalHelperFast.h  KDTreeLinkerAlgoT.h  KDTreeLinkerToolsT.h  MainFragmentRemovalAlgorithmFast.h  QuickUnion.h  SoftClusterMergingAlgorithmFast.h  TrackClusterAssociationAlgorithmFast.h
include/LCFragmentRemoval/: BeamHaloMuonRemovalAlgorithm.h  FragmentRemovalParentAlgorithm.h  MainFragmentRemovalAlgorithm.h  MainFragmentRemovalAlgorithmFast.h  MergeSplitPhotonsAlgorithm.h  NeutralFragmentRemovalAlgorithm.h  PhotonFragmentMergingAlgorithm.h  PhotonFragmentMergingBaseAlgorithm.h  PhotonFragmentRemovalAlgorithm.h  RecoPhotonFragmentMergingAlgorithm.h
include/LCHelpers/: ClusterHelper.h  FragmentRemovalHelper.h  ReclusterHelper.h  SortingHelper.h
include/LCMonitoring/: ClusterComparisonAlgorithm.h  DumpPfosMonitoringAlgorithm.h  EfficiencyMonitoringAlgorithm.h  MCParticlesMonitoringAlgorithm.h  VisualMonitoringAlgorithm.h
include/LCParticleId/: FinalParticleIdAlgorithm.h  MuonReconstructionAlgorithm.h  PhotonReconstructionAlgorithm.h  PhotonRecoveryAlgorithm.h  PhotonSplittingAlgorithm.h
include/LCPfoConstruction/: CLICPfoSelectionAlgorithm.h  KinkPfoCreationAlgorithm.h  PfoCreationAlgorithm.h  PfoCreationParentAlgorithm.h  V0PfoCreationAlgorithm.h
include/LCPlugins/: LCBFieldPlugin.h  LCEnergyCorrectionPlugins.h  LCParticleIdPlugins.h  LCPseudoLayerPlugin.h  LCShowerProfilePlugin.h
include/LCReclustering/: ExitingTrackAlg.h  ForceSplitTrackAssociationsAlg.h  ReclusteringParentAlgorithm.h  ResolveTrackAssociationsAlg.h  SplitMergedClustersAlg.h  SplitTrackAssociationsAlg.h  TrackDrivenAssociationAlg.h  TrackDrivenMergingAlg.h
include/LCTopologicalAssociation/: BackscatteredTracks2Algorithm.h  BackscatteredTracksAlgorithm.h  BrokenTracksAlgorithm.h  ConeBasedMergingAlgorithm.h  HighEnergyPhotonRecoveryAlgorithm.h  IsolatedHitMergingAlgorithm.h  LoopingTracksAlgorithm.h  MipPhotonSeparationAlgorithm.h  MuonClusterAssociationAlgorithm.h  MuonPhotonSeparationAlgorithm.h  ProximityBasedMergingAlgorithm.h  ShowerMipMerging2Algorithm.h  ShowerMipMerging3Algorithm.h  ShowerMipMerging4Algorithm.h  ShowerMipMergingAlgorithm.h  SoftClusterMergingAlgorithm.h  TopologicalAssociationParentAlgorithm.h
include/LCTrackClusterAssociation/: LoopingTrackAssociationAlgorithm.h  TrackClusterAssociationAlgorithm.h  TrackClusterAssociationAlgorithmFast.h  TrackRecoveryAlgorithm.h  TrackRecoveryHelixAlgorithm.h  TrackRecoveryInteractionsAlgorithm.h
include/LCUtility/: CaloHitPreparationAlgorithm.h  CaloHitPreparationAlgorithmFast.h  ClusterPreparationAlgorithm.h  EventPreparationAlgorithm.h  KDTreeLinkerAlgoT.h  KDTreeLinkerToolsT.h  PfoPreparationAlgorithm.h  TrackPreparationAlgorithm.h
include/Managers/: AlgorithmManager.h  AlgorithmObjectManager.h  CaloHitManager.h  ClusterManager.h  GeometryManager.h  InputObjectManager.h  MCManager.h  Manager.h  Metadata.h  ParticleFlowObjectManager.h  PluginManager.h  TrackManager.h  VertexManager.h
include/Objects/: CaloHit.h  CartesianVector.h  Cluster.h  DetectorGap.h  Event.h  EventContext.h  Helix.h  Histograms.h  MCParticle.h  OrderedCaloHitList.h  ParticleFlowObject.h  SubDetector.h  Track.h  TrackState.h  Vertex.h
include/Pandora/: Algorithm.h  AlgorithmHeaders.h  AlgorithmTool.h  ExternallyConfiguredAlgorithm.h  ObjectCreation.h  ObjectFactory.h  ObjectParameters.h  Pandora.h  PandoraEnumeratedTypes.h  PandoraIO.h  PandoraImpl.h  PandoraInputTypes.h  PandoraInternal.h  PandoraObjectFactories.h  PandoraSettings.h  PdgTable.h  Process.h  StatusCodes.h  TemplateAlgorithm.h  TemplateAlgorithmTool.h
include/Persistency/: BinaryFileReader.h  BinaryFileWriter.h  EventReadingAlgorithm.h  EventWritingAlgorithm.h  FileReader.h  FileWriter.h  PandoraIO.h  Persistency.h  XmlFileReader.h  XmlFileWriter.h
include/Plugins/: BFieldPlugin.h  EnergyCorrectionsPlugin.h  LArTransformationPlugin.h  ParticleIdPlugin.h  PseudoLayerPlugin.h  ShowerProfilePlugin.h
include/Templates/: TemplateAlgorithm.h  TemplateAlgorithmTool.h
include/Utilities/: BFieldCalculator.h  PseudoLayerCalculator.h  ShowerProfileCalculator.h
include/Xml/: tinystr.h  tinyxml.h
src/Api/: PandoraApi.cc  PandoraApiImpl.cc  PandoraContentApi.cc  PandoraContentApiImpl.cc
src/Geometry/: DetectorGap.cc  LArTPC.cc  SubDetector.cc
src/Helpers/: CaloHitHelper.cc  ClusterFitHelper.cc  ClusterHelper.cc  EnergyCorrectionsHelper.cc  FragmentRemovalHelper.cc  GeometryHelper.cc  MCParticleHelper.cc  ParticleIdHelper.cc  ReclusterHelper.cc  XmlHelper.cc
src/LCCheating/: CheatingClusterCleaningAlgorithm.cc  CheatingTrackToClusterMatching.cc  PerfectClusteringAlgorithm.cc  PerfectFragmentRemovalAlgorithm.cc  PerfectParticleFlowAlgorithm.cc
src/LCClustering/: ClusteringParentAlgorithm.cc  ConeClusteringAlgorithm.cc  ConeClusteringAlgorithmFast.cc  (+1 more)
(+132 files in other folders)
